# foundation-core

./: Cargo.toml  README.md  build.rs
assets/: material_symbols_names.txt  schema.sql
scripts/: update_material_symbols.rs
src/: diagnostics.rs  lib.rs  paths.rs
src/eavto/: connection.rs  executor.rs  mod.rs  object_type.rs  origin_type.rs  query_result_type.rs  stats.rs  store.rs  store_tests.rs  test_helpers.rs  transaction_type.rs  triple_type.rs  xsd_type.rs
src/eavto/query/: find.rs  mod.rs
src/owl/: aggregation.rs  cardinality.rs  cardinality_tests.rs  class.rs  class_disjoint_tests.rs  class_tests.rs  formula.rs  graph_config.rs  icons.rs  mod.rs  owl_tests.rs  property.rs  property_tests.rs  query_property.rs  query_property_tests.rs  search_helpers.rs  thing.rs  vocabulary.rs
src/owl/individual/: core.rs  find.rs  lock.rs  lock_tests.rs  materialize.rs  materialize_tests.rs  mod.rs  models.rs  models_tests.rs  properties.rs  properties_tests.rs  status.rs  timestamps.rs  timestamps_tests.rs  validation.rs  write.rs  write_tests.rs
src/owl/search/: engine.rs  mod.rs
src/search/: mod.rs
