[package]
name = "foundation-core"
version = "0.1.0"
edition = "2021"
description = "Local-first, append-only ontology store (EAVTO triples + OWL primitives) powering the Foundation app — embeds the Foundation base ontology and foundation:* vocabulary."
license = "AGPL-3.0-only"
repository = "https://github.com/danielterra/foundation-core"
readme = "README.md"
authors = ["daniel_terra@icloud.com"]
keywords = ["ontology", "owl", "rdf", "triplestore", "local-first"]
categories = ["database", "data-structures"]

[lib]
name = "foundation_core"
crate-type = ["rlib"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
lazy_static = "1.4"
sha2 = "0.10"
rhai = { version = "^1", features = ["sync"] }
tantivy = "0.22"
dirs = "5.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

[[bin]]
name = "update_material_symbols"
path = "scripts/update_material_symbols.rs"

[features]
test-helpers = []

[dev-dependencies]
tempfile = "3.8"
